# IpynbDockerTemplate

./: .env.sample  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml
